tests/ui/parser/issues/issue-89574.rs
fn main() {
    const EMPTY_ARRAY = [];
    //~^ missing type for `const` item
    //~| ERROR type annotations needed
    //~| ERROR type annotations needed
}
